--- a/Venälaižed.mw
+++ b/Venälaižed.mw
@@ -1,7 +1,7 @@
-[[Fail:Prokudin-Gorskii-08.jpg|thumb|right|250px|<center>Nored venälaižed neiččed. 20. voz'sadan augotiž, [[Prokudin-Gorskii Sergei|Prokudin-Gorskijan]] fotokuva.]]
-'''Venälaižed''' vai '''venänikad''' ({{lang-ru|русские}}) oma [[indoevropalaižed rahvahad|indoevropalaine]], [[slavižed rahvahad|slavine rahvaz]]. Elädas [[Venäma]]s, [[Ukrain]]as, [[Kazahstan]]as, [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiš]], [[Latvii|Latvijas]], [[Saksanma]]s da toižiš valdkundoiš.
+[[Fail:Prokudin-Gorskii-08.jpg|thumb|right|250px|<center>Nored venälaižed neiččed. 20. voz'sadan augotiž, [[Prokudin-Gorskii Sergei|Prokudin-Gorskijan]] fotokuva]]
+'''Venälaižed''' vai '''venänikad''' ({{lang-ru|русские}}) oma [[indoevropalaižed rahvahad|indoevropine]], [[slavižed rahvahad|slavine rahvaz]]. Elädas [[Venäma]]s tobjimalaz, mugažo [[Ukrain]]as, [[Kazahstan]]as, [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiš]], [[Latvii|Latvijas]], [[Saksanma]]s da toižiš valdkundoiš.
 
-Venälaižiden rahvahankel' om [[venäkel']]. Rahvahan lugumär om läz 133 millionad.
+Venälaižiden rahvahankel' om [[venäkel']], se om oficialine Venälaižen Federacijan kaikiš subjektoiš i Vaugedvenäman üks' kahtes oficialižes kelespäi. Rahvahan lugumär om läz 133 millionad. Heiden enambuz oma [[ateizm|ateistad]], prevalirui uskond om hristanuskond ([[ortodoksine hristanuskond|ortodoksine]] päpaloin), rahvahaline kul'tur otab sidä aluseks.
 
 {{stub}}
 [[Kategorii:Venälaižed| ]]
