--- a/Azerbaidžanine_pahlav.mw
+++ b/Azerbaidžanine_pahlav.mw
@@ -1,9 +1,11 @@
-[[Fail:Azərbaycan paxlavası.jpg|thumb|right|250px|Azerbaidžanalaine pahlav]]
-'''Azerbaidžanalaine pahlav''' ([[azerbaidžanan kel'|azer.]]: ''azərbaycan paxlavası'') om '''[[pahlav]]an''' eriline tip, kudamb om populärine [[Azerbaidžan]]as da [[Venäma]]s. Om [[septahtaz|septahthaspäi]], [[pähkim|pähkmišpäi]] (tobjimalaz nece om [[funduk]] vai [[grekalaine pähkim]]) da erazvuiččiden [[eriližmagutez|eriližmagutesišpäi]].
+[[Fail:Azərbaycan paxlavası.jpg|thumb|right|250px|Azerbaidžanine pahlav]]
+'''Azerbaidžanine pahlav''' ({{lang-az|azərbaycan paxlavası}}) om [[pahlav]]an eriline toižend, se om populärine [[Azerbaidžan]]as i [[Venäma]]s. Slokosttäs [[septahtaz|septahthaspäi]], [[pähkim|pähkmišpäi]] (tobjimalaz nece om [[funduk]] vai [[grekine pähkim]]) da erazvuiččiš [[eriližmagutez|eriližmagutesišpäi]].
 
 == Kacu mugažo ==
 * [[Pahlav]]
-{{stub}}
 
+{{Category:Azerbaijani pakhlava}}
+
+{{stub}}
 [[Kategorii:Azerbaidžanan keitand]]
 [[Kategorii:Päivnouzmaižed jauhtegesed]]
