--- a/Azerbaidžanine_pahlav.mw
+++ b/Azerbaidžanine_pahlav.mw
@@ -1,10 +1,12 @@
 [[Fail:Azərbaycan paxlavası.jpg|thumb|right|250px|Azerbaidžanine pahlav]]
 '''Azerbaidžanine pahlav''' ({{lang-az|azərbaycan paxlavası}}) om [[pahlav]]an eriline toižend, se om populärine [[Azerbaidžan]]as i [[Venäma]]s. Slokosttäs [[septahtaz|septahthaspäi]], [[pähkim|pähkmišpäi]] (tobjimalaz nece om [[funduk]] vai [[grekine pähkim]]) da erazvuiččiš [[eriližmagutez|eriližmagutesišpäi]].
 
-== Kacu mugažo ==
-* [[Pahlav]]
+Tehtas blödad Azerbaižanas [[navruz]]an oigendusen täht päpaloin, no ei ole vaiše pühäčuile. Söm om äišoidukaz [[šafran]]an ližadusenke. Vaumitadas levedas madalas paštandaličus. Om regionaližid eriližusid pahlavan tehmižes ingredijentoiden i vaumičendan mahtusen mödhe.
 
-{{Category:Azerbaijani pakhlava}}
+== Homaičendad ==
+<references />
+
+{{Commons|Category:Azerbaijani pakhlava}}
 
 {{stub}}
 [[Kategorii:Azerbaidžanan keitand]]
