--- a/Mendos_(lidn).mw
+++ b/Mendos_(lidn).mw
@@ -9,7 +9,7 @@
  | Voz' = 2010
  | Pind = 57
  | Fail = Downtown Mendoza.jpg
- | Pämez' = 
+ | Pämez' = Ulpiano Suarez<br/>(tal'vku 2019—)
  | Telefonkod = +54-(0)261
  | Aigvö = [[UTC]]−3
 }}
@@ -18,12 +18,27 @@
 == Istorii ==
 Eländpunktan aluz om pandud Pedro del' Kastiljo-kapitanal vn 1561 2. päiväl keväz'kud, nimiti hänen pämehen kanzannimen mödhe. Enamba 200 vot lidn oli alištunu Čilin tobmudele. Lidn om udessaudud vn 1861 lujan manrehkaidusen jäl'ghe. Vspäi 1887 raudte ühtenzoitab Buenos Airesanke, vl 1910 Transandine raudte om saudud Čilihe (eile rados vspäi 1984).
 
-Mendos da sen ümbrišt šingotasoiš  [[vin]]an tehmižel, [[kivivoi]]n samižel da ümbriradmižel, peniden lendimiden pästandal.
+Mendos da sen ümbrišt šingotasoiš [[vin]]an tehmižel, [[kivivoi]]n samižel da ümbriradmižel, peniden lendimiden pästandal.
 
 == Geografijan andmused ==
 Lidn sijadase [[Andad|Andiden]] pämägisel'ganno, 769 m ü.m.t. keskmäižel korktusel. Matkad [[Buenos Aires]]aspäi om 1037 km lodeheze. Lähembaine järed lidn om [[Santjago]] (Čili).
 
-Vn 2010 Argentinan rahvahanlugemižen mödhe lidnan eläjiden lugu oli 115 041 ristitud. Kaik 1,05 mln ristituid elädas lidnaglomeracijas (nellänz' surtte valdkundas).
+Vn 2010 Argentinan rahvahanlugemižen mödhe lidnan eläjiden lugu oli 115 041 ristitud. Kaik 1,4 mln ristituid elädas lidnaglomeracijas (2015, nellänz' surtte valdkundas).
+
+== Mel'heižtahod ==
+Mendos om lidn vihoštesenke. Puištod, restoranad, öližed klubad i teatrad ratas siš.
+
+Lidnan keskuzpala om zon jaugnikoiden täht, om nenid mel'heižtahoid:
+* pühän Franciskan jumalanpertin ruinad;
+* lidnan muzei;
+* puišt [[Hose de San-Martin]]an nimed.
+
+Znamasižed i mel'hetartuižed oma viž torgud:
+* Ispanijan torg;
+* Čilin torg;
+* Italijan torg;
+* Hose de San-Martinan torg;
+* Ripmatomuden torg.
 
 == Homaičendad ==
 <references />
