--- a/Obama_Barak.mw
+++ b/Obama_Barak.mw
@@ -5,6 +5,8 @@
 }}
 '''Barack Hussein Obama Toine''' ({{lang-en|Barack Hussein Obama II}} [bə'rɑːk huː'seɪn ɵ'bɑːmə]; sünd. [[4. eloku]] [[1961]], [[Gonolulu]], [[Havajad]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) om enzne, 44. [[AÜV|AÜV:oiden]] prezident (20.01.2009—20.01.2017, radoi kaks' strokud). [[Nobelän premii|Nobelän kožundpremijan]] laureat (2009).
 
+Amerikaine politikanmez' om [[Kolumbijan universitet]]an pästnik. Mez' openui [[Garvardan universitet]]an Oiktusen školas, siš hän oli universitetižen periodižen ''Harvard Law Review''-pästandan redaktoran. Obama radoi kundaližen organizatoran mugažo i advokatan civiližen oiktusen sferas. Vspäi 1992 vhesai 2004 hän oli konstitucižen oiktusen opendajaks [[Čikago]]n juridižiden tedoiden institutas i ühtenaigašti oli valitud koume kerdad da radoi [[Illinois]]-štatan senatas vll 1997−2004.
+
 == Homaičendad ==
 <references/>
 
