--- a/Vargas_Dorangel'.mw
+++ b/Vargas_Dorangel'.mw
@@ -1,7 +1,10 @@
 {{Personalii}}
-'''Hose Dorangel' Vargas Gomes''' ({{lang-es|José Dorángel Vargas Gómez}}) a. k. a. '''El' Komegente''' (isp.: '' El Comegente'') vai '''[[Andad|Andoiden]] [[Gannibal Lekter]]''' (sünd. [[14. semendku]] [[1957]], [[Kan'jo Sankudo]], [[Venesuel]]) om venesuelalaine koditoi serijaine rikoi, [[man'jak]], [[kannibalizm|kannibal]] da meletoi. Rikoi i söi enamb 10 ristitud, kaik tetabišpäi žertvoišpäi oli [[mez'|mehed]].
+'''Hose Dorangel' Vargas Gomes''' ({{lang-es|José Dorángel Vargas Gómez}}) a. k. a. '''El' Komegente''' ({{lang-es|El Comegente}}) vai '''[[Andad|Andoiden]] [[Gannibal Lekter]]''' (sünd. [[14. semendku]] [[1957]], [[Kan'jo Sankudo]], [[Venesuel]]) om venesueline koditoi serijaine rikoi, [[man'jak]], [[kannibalizm|kannibal]] da meletoi. Rikoi i söi enamb kümned ristitud, [[mez'|mehed]] oliba kaikiš tetabambiš žertvoišpäi.
 
-Hän söi vaiše mehid (tobjimalaz sportmehid i sijaližid radajid): naižed, hänen mel'pidegen mödhe, oma „magutomad“, sangeričuiš om „äi [[holesterin]]ad“, a vanhušid oma „lujas požastoitud, miše södaiži heid“. Ičenägubha diagnozha i sijaližiden eläjiden vastustushe kacmata, Vargas oli sittud i om [[türm]]as.
+Man'jak söi vaiše mehid (sportmehid i sijaližid radajid tobjimalaz): naižed, hänen mel'pidegen mödhe, oma «magutomad», sangeričuiš om «äi [[holesterin]]ad», a vanhušid oma «lujas požastoitud, miše södaiži heid». Ičenägubha diagnozha i sijaližiden eläjiden vastustushe kacmata, Vargas oli sittud i om [[türm]]as.
+
+== Homaičendad ==
+<references />
 
 {{stub}}
 [[Kategorii:Man'jakad]]
