*Empty MediaWiki Message*

--- a/Vargas_Dorangel'.mw
+++ b/Vargas_Dorangel'.mw
@@ -1,7 +1,7 @@
 {{Personalii}}
 '''Hose Dorangel' Vargas Gomes''' ({{lang-es|José Dorángel Vargas Gómez}}) a. k. a. '''El' Komegente''' ({{lang-es|El Comegente}}) vai '''[[Andad|Andoiden]] [[Gannibal Lekter]]''' (sünd. [[14. semendku]] [[1957]], [[Kan'jo Sankudo]], [[Venesuel]]) om venesueline koditoi serijaine rikoi, [[man'jak]], [[kannibalizm|kannibal]] da meletoi. Rikoi i söi enamb kümned ristitud (kaks'toštkümne žertvad oma todištadud), [[mez'|mehed]] oliba hänen kaikiš tetabambiš žertvoišpäi.
 
-Mez' om ezmäine tetab serijaine man'jak valdkundan istorijas. Mecazi žertvoid Torbes-jogen ümbrišton 12. Uhokun puištos läz [[Tarib]]-lidnad [[Tačir]]-provincijas, 750 kilometras Karakasaspäi. Ogernik oli tactud vn 1999 uhokun 12. päiväl.
+Mez' om ezmäine tetab serijaine man'jak valdkundan istorijas. Mecazi žertvoid Torbes-jogen ümbrišton 12. Uhokun puištos läz [[Tarib]]-lidnad [[Tačir]]-provincijas, 750 kilometras Karakasaspäi. Ogernik oli tabatud vn 1999 uhokun 12. päiväl.
 
 Man'jak söi vaiše mehid (sportmehid i sijaližid radajid tobjimalaz): naižed, hänen mel'pidegen mödhe, oma «magutomad», sangeričuiš om «äi [[holesterin]]ad», a vanhušid oma «lujas požastoitud, miše södaiži heid». Ičenägubha diagnozha i sijaližiden eläjiden vastustushe kacmata, Vargas oli sittud i om [[türm]]atud psihiatrižes klinikas ičeze elon lophusai.
 
