--- a/Orestiad.mw
+++ b/Orestiad.mw
@@ -1,5 +1,5 @@
 [[Fail:058 Kostur Lake.jpg|thumb|right|250px|Orestiad]]
-'''Orestiad''' ({{lang-el|Ορεστιάδα}} ''Orestiada'') om järv [[Grekanma]]n lodehes.
+'''Orestiad-järv''' ({{lang-el|Λίμνη Ορεστιάδα}} ''Liman Orestiada''), vai '''Kastorijan järv''', om vezišt [[Grekanma]]n lodehes.
 
 Pind om 28 km². Järv om 10 m süvütte, pind sijadase 625..630 m ü.m.t. korktusil. Kala da [[majag]]ad elädas järves.
 
