--- a/Orestiad.mw
+++ b/Orestiad.mw
@@ -1,7 +1,7 @@
 [[Fail:058 Kostur Lake.jpg|thumb|right|250px|Orestiad]]
-'''Orestiad-järv''' ({{lang-el|Λίμνη Ορεστιάδα}} ''Liman Orestiada''), vai '''Kastorijan järv''', om vezišt [[Grekanma]]n lodehes.
+'''Orestiad-järv''' ({{lang-el|Λίμνη Ορεστιάδα}} ''Liman Orestiada''), vai '''Kastorijan järv''' ({{lang-el|Λίμνη Καστορίας}} ''Liman Kastorias''), om vezišt [[Grekanma]]n lodehes.
 
-Pind om 28 km². Järv om 10 m süvütte, pind sijadase 625..630 m ü.m.t. korktusil. Kala da [[majag]]ad elädas järves.
+Järv sai nimitust [[oreadad]]-mäginimfoiden mödhe. Vezišton pind om 28 km². Järv om 10 m süvütte, pind sijadase 625..630 m ü.m.t. korktusil. Kala da [[majag]]ad elädas järves.
 
 Ühesa vezivalud lanktas järvhe. Lugetas, miše järv om olmas [[miocen]]aspäi, se oli 10 mln vozid tagaz. [[Kastorii]]-lidn seižub Orestiadan päivlaskmaižen randan pol'sarel.
 
