--- a/Orestiad.mw
+++ b/Orestiad.mw
@@ -1,9 +1,11 @@
 [[Fail:058 Kostur Lake.jpg|thumb|right|250px|Orestiad]]
 '''Orestiad-järv''' ({{lang-el|Λίμνη Ορεστιάδα}} ''Liman Orestiada''), vai '''Kastorijan järv''' ({{lang-el|Λίμνη Καστορίας}} ''Liman Kastorias''), om vezišt [[Grekanma]]n lodehes.
 
-Järv sai nimitust [[oreadad]]-mäginimfoiden mödhe. Vezišton pind om 28 km². Järv om 10 m süvütte, pind sijadase 625..630 m ü.m.t. korktusil. Kala da [[majag]]ad elädas järves.
+Järv sai nimitust [[oreadad]]-mäginimfoiden mödhe. Vezišton pind om 28 km². Järv om 10 m süvütte, pind sijadase 625..630 m ü.m.t. korktusil. Kala da [[majag]]ad elädas järves, linduiden severz'-se erikoid sötlesoiš kalal järven randaspäi.
 
-Ühesa vezivalud lanktas järvhe. Lugetas, miše järv om olmas [[miocen]]aspäi, se oli 10 mln vozid tagaz. [[Kastorii]]-lidn seižub Orestiadan päivlaskmaižen randan pol'sarel.
+Ühesa vezivalud lanktas järvhe, se mülüb [[Al'jakmon]]-jogen basseinha. Lugetas, miše järv om olmas [[miocen]]aspäi, se pord oli 10 mln vozid tagaz. [[Kastorii]]-lidn seižub Orestiadan päivlaskmaižen randan pol'sarel, mitte jagab järved kaks'haze.
+
+Puine [[tablut Dispiliospäi]] om löutud järven kuivatoitusen jäl'ghe. Se om kaikiš amuižemb löutud artefakt kirjutadud tekstanke, märitihe igäd da panihe sidä videks voz'tuhaks EME.
 
 == Homaičendad ==
 <references />
