*Empty MediaWiki Message*

--- a/Orestiad.mw
+++ b/Orestiad.mw
@@ -5,7 +5,7 @@ Järv sai nimitust [[oreadad]]-mäginimfoiden mödhe. Vezišton pind om 28 km².
 
 Ühesa vezivalud lanktas järvhe, se mülüb [[Al'jakmon]]-jogen basseinha. Lugetas, miše järv om olmas [[miocen]]aspäi, se pord oli 10 mln vozid tagaz. [[Kastorii]]-lidn seižub Orestiadan päivlaskmaižen randan pol'sarel, mitte jagab järved kaks'haze.
 
-Puine [[tablut Dispiliospäi]] om löutud järven kuivatoitusen jäl'ghe. Se om kaikiš amuižemb löutud artefakt kirjutadud tekstanke, märitihe igäd da panihe sidä videks voz'tuhaks EME.
+Puine [[tablut Dispiliospäi]] om löutud kuivatud järven aigan. Se om kaikiš amuižemb löudmine kirjutadud tekstanke, märitihe igäd da panihe sidä videks voz'tuhaks EME.
 
 == Homaičendad ==
 <references />
