--- a/Orestiad.mw
+++ b/Orestiad.mw
@@ -1,11 +1,11 @@
-[[Fail:058 Kostur Lake.jpg|thumb|right|250px|Orestiad]]
+[[Fail:058 Kostur Lake.jpg|thumb|right|250px|Orestiadan nägu vn 2011 keväz'kus]]
 '''Orestiad-järv''' ({{lang-el|Λίμνη Ορεστιάδα}} ''Liman Orestiada''), vai '''Kastorijan järv''' ({{lang-el|Λίμνη Καστορίας}} ''Liman Kastorias''), om vezišt [[Grekanma]]n lodehes.
 
 Järv sai nimitust [[oreadad]]-mäginimfoiden mödhe. Vezišton pind om 28 km². Järv om 10 m süvütte, pind sijadase 625..630 m ü.m.t. korktusil. Kala da [[majag]]ad elädas järves, linduiden severz'-se erikoid sötlesoiš kalal järven randaspäi.
 
 Ühesa vezivalud lanktas järvhe, se mülüb [[Al'jakmon]]-jogen basseinha. Lugetas, miše järv om olmas [[miocen]]aspäi, se pord oli 10 mln vozid tagaz. [[Kastorii]]-lidn seižub Orestiadan päivlaskmaižen randan pol'sarel, mitte jagab järved kaks'haze.
 
-Puine [[tablut Dispiliospäi]] om löutud kuivatud järven aigan. Se om kaikiš amuižemb löudmine kirjutadud tekstanke, märitihe igäd da panihe sidä videks voz'tuhaks EME.
+Puine [[tablut Dispiliospäi]] om löutud järven kuivan randan aigan. Se om kaikiš amuižemb löudmine kirjutadud tekstanke, märitihe igäd da panihe sidä videks voz'tuhaks EME.
 
 == Homaičendad ==
 <references />
