--- a/Bikin.mw
+++ b/Bikin.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Bikinan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 15,928
- | Voz' = 2017
+ | Eläjiden lugu = 16,026
+ | Voz' = 2021
  | Pind = 85.74
- | Fail = Бикин, жел-дор вокзал.jpg
- | Pämez' = Marina Manuilova (''velgusentäutai'', 2017)
+ | Fail = Bikin pagebanner.jpg
+ | Pämez' = Dmitrii Osadčuk<br />(eloku 2021—,<br />''velgusentäutai'')
  | Telefonkod = +7-42155-xx-xxx
  | Aigvö = [[UTC]]+10 (MSK+7)
 }}
@@ -24,14 +24,24 @@ Lidn sijadase [[Bikin (jogi)|Bikin-jogen]] oiktal randal tobjimalaz ([[Ussuri]]n
 Bikin om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 154 ristitud, rajonan ristitišton seičeme kümnendest. Kaikiš suremb ristitišt oli enamba 19 tuhad eläjid koume pordod: vozil 1959, 1989—1992 i 2002—2008 (vl 2002 — 19 641 rist.).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 154 ristitud, rajonan ristitišton seičeme kümnendest. Kaikiš suremb ristitišt oli enamba 19 tuhad eläjid koumes pordos: vozil 1959, 1989−1992 i 2002−2008 (19 641 rist. vl 2002).
 
 Rahvahad (vl 2010, enamba 1%): [[venälaižed]] — 89,6%, [[ukrainalaižed]] — 2,6%, [[totarlaižed]] — 1,3%, toižed rahvahad — 6,5%.
+
+Edeline lidnankundan pämez' om Marina Manuilova (2017 — eloku 2021).
 
 == Ižanduz da transport ==
 Ižandusen päsarakod oma sömtegimišt da [[mebel'|meblin]] tehmine, mugažo [[trikotaž|trikotegesiden]] fabrik om olmas lidnas. Profškol da Habarovskan tegimištoiž-ekonomižen tehnikuman filial oma professionaližen opendusen aluzkundoikš.
 
 Avtobusad oma kundaližeks transportaks lidnas da sen ümbrištos. «Ussuri»-avtote ümbärdab lidnad päivnouzmas. ''Bikin-raudtestancii'' om olmas [[Transsib]]an [[Habarovsk]] — [[Ussuriisk]] jonol vspäi 1895. Raudte- da avtotesildad oma lidnan suves Bikin-joges päliči.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Бикин, памятник ВОВ.jpg|Vägestusen Sures sodas memorial (2011)
+Bikin, Vostok road.jpg|Bikin-jogi i avtotesild siš päliči (2008)
+Бикин, районный дом культуры.jpg|Bikinan rajonan kul'turkeskuz (2012)
+Бикин, жел-дор вокзал.jpg|Bikin-päraudtestancijan sauvuz vl 2011
+</gallery>
 
 == Irdkosketused ==
 * [http://www.adm-bikin.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''adm-bikin.ru'').] {{ref-ru}} {{ref-en}} {{ref-de}}
