--- a/Birobidžan.mw
+++ b/Birobidžan.mw
@@ -1,19 +1,20 @@
 {{Eländpunkt
  | Nimi = Birobidžan<br />Биробиджан <small>(ven.)</small><br />ביראָבידזשאַן <small>(jidiš)</small><br /><small>''(Birabidzsan)''</small>
  | Lidnanznam = Coat of arms of Birobidzhan.svg
- | Flag = 
+ | Flag = Flag of Birobidzhan.svg
  | Lidnanznam text = Birobidžanan lidnanznam
- | Flag text = 
+ | Flag text = Birobidžanan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 73,623
  | Voz' = 2018
  | Pind = 169.38
- | Fail = Nádraží Birobidžan.jpg
+ | Fail = Обелиск в сквере Победы.jpg
  | Pämez' = Jevgenii Korostelöv<br />(kezaku 2015—)
  | Telefonkod = +7-42622-xx-xxx
  | Avtokod = 79
  | Aigvö = [[UTC]]+10 ([[MSK]]+7)
 }}
+[[Fail:Музей и библиотека3.jpg|thumb|left|250px|Agjan muzei i kirjišt [[Šolom-Aleihem]]an nimed (2016)]]
 '''Birobidžan''' ({{lang-ru|Биробиджан}}, {{lang-yi|ביראָבידזשאַן}} ''Birabidzsan'', {{lang-evn|Бира бид(ж)енэ}}) om lidn da lidnümbrik [[Venäma]]n suvipäivlaskmas. Se om [[Evrejan avtonomine agj|Evrejan avtonomižen agjan]] pälidn da kaikiš suremb lidn, mugažo [[Birobidžanan rajon]]an administrativine keskuz (ei mülü rajonha).
 
 == Istorii ==
@@ -30,6 +31,15 @@ Birobidžan om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 75 413 ristitud. Kaikiš suremb ristitišt oli 86 700 eläjad vl 1992.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Birobidgan City Hall (WR).tif|Lidnan administracijan sauvuz (2001)
+Благовещенский собор в Биробиджане.jpeg|Blagoveššenjan päjumalanpert', vn 2012 nägu
+Биробиджан, река Бира, Биробиджанская ТЭЦ.JPG|Birobidžanan LEK i Bir-jogi vl 2007
+ПГУ им. Шолом-Алейхема.jpg|Amurverine valdkundaline universitet [[Šolom-Aleihem]]an nimed (2012)
+Nádraží Birobidžan.jpg|Birobidžan I-päraudtestancijan sauvuz vl 2009
+</gallery>
 
 == Homaičendad ==
 <references />
