--- a/Birobidžan.mw
+++ b/Birobidžan.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 73,623
  | Voz' = 2018
  | Pind = 169.38
- | Fail = Обелиск в сквере Победы.jpg
+ | Fail = Birobidjan mainsquare.jpg
  | Pämez' = Jevgenii Korostelöv<br />(kezaku 2015—)
  | Telefonkod = +7-42622-xx-xxx
  | Avtokod = 79
