--- a/Evrejan_avtonomine_agj.mw
+++ b/Evrejan_avtonomine_agj.mw
@@ -62,6 +62,7 @@ Klimat om [[ven vö|ven]] mussonine. Tal'vel paneb vähä lunt, om vilu. Vilukun
 Londuseližed varad oma [[bur hil']], [[kivihil']], metallad ([[raud|raudkivend]], [[tin]], [[marganc]], [[kuld]], [[magnii]], [[berillii]] da tž. harvad mametallad), [[sauvondmaterialad]] ([[mouckivi]], [[savi|saved]], [[lete|letked]], [[gravii]], [[kivi (material)|sauvondkivi]]), [[grafit]], [[tal'k]], mineraližed [[muju]]d, [[fosfor|fosforitad]], [[mec]], [[vezi|reskvezi]].
 
 == Tobmuz ==
+[[Fail:Government building EAO.jpg|thumb|right|250px|Agjan ohjastusen pert' [[Birobidžan]]as (2015)]]
 Avtonomižen agjan pämez' nimitase gubernatoraks. [[Levintal' Aleksandr|Aleksandr Levintal']] radab gubernatoran vs 2015 uhokun 24. päiväspäi. Kaik rahvaz änestab gubernatorad videks vodeks, enamba kaht strokud jäl'geten ei sa. Gubernator-žo radab Ohjastusen ezimehen, hän märičeb sen strukturad da paneb sen ühtnijoid radnikusile. Varagubernator, kaks' ezmäšt Ohjandusen varaezimest da koume muite Ohjandusen varaezimest oma hänele abhu.
 
 Evrejan avtonomižen agjan üks'kodine parlament om Käskusenandai Suim ({{lang-yi|לעגיסלאַטיווע אַסעמבלי פון די אידישע אַוטאָנאָמאָוס קאנט}} ''legislative asembli fun di idiše autonomous kant''). Kaik rahvaz valičeb sen 19 ezitajad videks vodeks. [[Pavlova Lübov'|Lübov' Pavlova]] radab Käskusenandajan Suiman ezimeheks vs 2016 sügüz'kun 30. päiväspäi.
