--- a/Birobidžan.mw
+++ b/Birobidžan.mw
@@ -32,10 +32,12 @@ Birobidžan om lidnümbrikon üks'jäine eländpunkt.
 == Eläjad ==
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 75 413 ristitud. Kaikiš suremb ristitišt oli 86 700 eläjad vl 1992.
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kahesa pühäpertid om lidnas<ref>[http://sobory.ru/geo/locat/13822 Birobidžanan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref>: Pühän Jumalanmaman Blagoveššenjan kafedraline päjumalanpert', puine Mikulai-čudonsädajan jumalanpert', kaks' jumalanpertid toižiš sauvusiš (aluzkundoidenno), koume časounäd, Jumalanmaman Kazanin jumalaižen jumalanpert' (om sauvomas vspäi 2012).
+
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Birobidgan City Hall (WR).tif|Lidnan administracijan sauvuz (2001)
-Благовещенский собор в Биробиджане.jpeg|Blagoveššenjan päjumalanpert', vn 2012 nägu
+Благовещенский собор в Биробиджане.jpeg|Pühän Jumalanmaman Blagoveššenjan kafedraline päjumalanpert', vn 2012 nägu
 Биробиджан, река Бира, Биробиджанская ТЭЦ.JPG|Birobidžanan LEK i Bir-jogi vl 2007
 ПГУ им. Шолом-Алейхема.jpg|Amurverine valdkundaline universitet [[Šolom-Aleihem]]an nimed (2012)
 Nádraží Birobidžan.jpg|Birobidžan I-päraudtestancijan sauvuz vl 2009
