--- a/Nevondkundaline_Port.mw
+++ b/Nevondkundaline_Port.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 24,249
  | Voz' = 2018
  | Pind = 69
- | Fail = Sovetskaya Gavan - Administration of the Sity.jpg
+ | Fail = Sovetskaya Gavan - Devyatietazhki.JPG
  | Pämez' = Pavel Borovskii<br />(sügüz'ku 2014—)
  | Telefonkod = +7-42138-xx-xxx
  | Avtokod = 27
@@ -28,6 +28,15 @@ Nevondkundaline Port om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 27 712 ristitud, rajonan kaks' koumandest. Kaikiš suremb ristitišt oli 35 500 eläjad vl 1992.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Sovetskaya Gavan - Administration of the Sity.jpg|Lidnan administracijan sauvuz (2009)
+Sovetskaya Gavan - Orthodox church.jpg|Phh. Pedroin da Pauloin jumalanpert' (ortodoksine hristanuskond), vn 2009 nägu
+Sovetskaya Gavan - Docks.JPG|Pohjoižen laivankohenduztegimen dok vl 2010
+Sovetskaya Gavan - Sberbank.jpg|«[[Sberbank]]an» ofis vl 2011
+Sovetskaya Gavan - Aeroport.jpg|«Mai-Gatk»-lendimportan sauvuz (2011. voz' vai sen aigemba)
+</gallery>
 
 == Irdkosketused ==
 * [http://admsovgav.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admsovgav.ru'').] {{ref-ru}}
