--- a/Beats_Electronics.mw
+++ b/Beats_Electronics.mw
@@ -1,7 +1,11 @@
-[[Fail:Whitebeatsbydreheadphones.jpg|thumb|right|250px|Neižne «Beats Electronics»-kundlimidenke.]]
-'''«Beats Electronics»''' (tetab kut '''«Beats by Dr. Dre»''') om [[AÜV|amerikalaine]] [[kundlimed|kundlimiden]] da [[komedpagižim]]iden tegii da satai. Tegeb [[2006]] vspäi [[Santa Monik]]as. Vspäi 2014 mülüb [[Apple]]-kompanijan strukturha. Brendan tegii om tetab reper [[Dr. Dre]].
+[[Fail:Whitebeatsbydreheadphones.jpg|thumb|right|250px|Neižne «Beats Electronics»-kundlimidenke]]
+'''«Beats Electronics»''' (sen brend om '''«Beats by Dr. Dre»''') om [[AÜV|amerikalaine]] [[kundlimed|kundlimiden]] da [[komedpagižim]]iden tegii i satai. Tegeb vspäi [[2006]] [[Santa Monik]]as. Vspäi 2014 mülüb [[Apple]]-kompanijan strukturha. Brendan tegii om tetab [[Dr. Dre]]-reppajatai. Päfater sijadase [[Kalver-Siti]]š, [[Kalifornii]].
 
 Kompanijan produkcii lähteb reklamas, fil'miš, muzikklipoiš da [[SMI]].
+
+== Irdkosketused ==
+* [http://beatsbydre.com/ Kompanijan sait (''beatsbydre.com'').] {{ref-en}}
+{{Commons|Category:Beats By Dre}}
 
 {{stub}}
 [[Kategorii:Elektronikan tegijad]]
