--- a/Beats_Electronics.mw
+++ b/Beats_Electronics.mw
@@ -1,7 +1,9 @@
 [[Fail:Whitebeatsbydreheadphones.jpg|thumb|right|250px|Neižne «Beats Electronics»-kundlimidenke]]
-'''«Beats Electronics»''' (sen brend om '''«Beats by Dr. Dre»''') om [[AÜV|amerikalaine]] [[kundlimed|kundlimiden]] da [[komedpagižim]]iden tegii i satai. Tegeb vspäi [[2006]] [[Santa Monik]]as. Vspäi 2014 mülüb [[Apple]]-kompanijan strukturha. Brendan tegii om tetab [[Dr. Dre]]-reppajatai. Päfater sijadase [[Kalver-Siti]]š, [[Kalifornii]].
+'''«Beats Electronics»''' (sen brend om '''«Beats by Dr. Dre»''') om [[AÜV|amerikalaine]] [[kundlimed|kundlimiden]] da [[komedpagižim]]iden tegii i satai. Päfater sijadase [[Kalver-Siti]]š, [[Kalifornii]]. Kompanijal kaks' alusenpanijad om: brendan tegii om tetab [[Dr. Dre]]-reppajatai da hiphopprodüser, toine om ''Interscope Geffen A&M Records''-kompanijan enzne Džimmi Aiovin-ezimez'.
 
-Kompanijan produkcii lähteb reklamas, fil'miš, muzikklipoiš da [[SMI]].
+Kompanii zavodi tehmižen [[Santa Monik]]as vl [[2006]]. Severz'-se vozid sen pala oli osttud [[HTC]]-kompanijal. Vn 2014 lopuspäi «Beats Electronics» mülüb [[Apple]]-korporacijan strukturha, se osti kompanijad alusenpanijoil 3 mlrd US$ summas. Nügüd'aigan firm pästab mugažo saudud südäimehe audiosistemid avtoiden täht i kompjuterprogramad onlainmuzikan täht.
+
+Kompanijan produkcii lähtleb reklamas, fil'miš, muzikklipoiš da [[SMI]]š.
 
 == Irdkosketused ==
 * [http://beatsbydre.com/ Kompanijan sait (''beatsbydre.com'').] {{ref-en}}
