--- a/Resling.mw
+++ b/Resling.mw
@@ -1,10 +1,15 @@
 {{A10000}}
 [[Fail:Young Lions cup action in Strathroy.jpg|thumb|right|250px|Tipine gruppvoibištelend reslingas]]
-'''Resling''' ([[anglijan kel'|anglijan kelel]] om ''wrestling'' — ''borcuind'') om [[teatr]]aline lavastuzborcuind, kudamban vägestai om tetab aigvodhe.
+'''Resling''' ([[anglijan kel'|anglijan kelel]] om ''wrestling'' — ''borcuind'') om [[teatr]]aline lavastuz[[borcuind]], kudamban vägestai om tetab aigvodhe.
 
-Reslingan kodima om [[Francii]], kus nece [[šou]]n tip om sädud [[19. voz'sada]]s (siloi oli tetab kut ''francijalaine borcuind''). Nügüd' se om lujas populärine kaiked mail'madme, sidä kesken [[Venäma]]s.
+Reslingan kodima om [[Francii]], kus nece [[šou]]n toižend om sädud [[19. voz'sada]]s (siloi oli tetab kut ''francine borcuind''). Nügüd' se om populärine lujas kaiked mail'madme, sidä kesken [[Venäma]]s.
 
 Kaikiš suremb reslingfederacii om ''[[World Wrestling Entertainment]] (WWE)''.
+
+Resling kävutab [[melodram]]an elementoid avaros. Borcuindan personažad oma znamakahad personad, hö tehtas edelpäi kirjutadud scenarijan mödhe i ozutadas kontrastirujid kosketusid hüvüden i pahuden borcuindan kartte. Lavastused mändas [[boks (sportansugu)|boksan]] pojaval ringal. Ozutadas äi uudimidentagaižid ližascenoid TV-šous pid'oitelemha «dramad» ringal. Reslerad vaumitadas, miše torata oikti i kaita ičeze da vastustajad, ka todesižen trauman naceinuz om pen'.
+
+== Homaičendad ==
+<references />
 
 {{stub}}
 [[Kategorii:Resling| ]]
