*Empty MediaWiki Message*

--- a/Resling.mw
+++ b/Resling.mw
@@ -6,7 +6,7 @@ Reslingan kodima om [[Francii]], kus nece [[šou]]n toižend om sädud [[19. voz
 
 Kaikiš suremb reslingfederacii om ''[[World Wrestling Entertainment]] (WWE)''.
 
-Resling kävutab [[melodram]]an elementoid avaros. Borcuindan personažad oma znamakahad personad, hö tehtas edelpäi kirjutadud scenarijan mödhe i ozutadas kontrastirujid kosketusid hüvüden i pahuden borcuindan kartte. Lavastused mändas [[boks (sportansugu)|boksan]] pojaval ringal. Ozutadas äi uudimidentagaižid ližascenoid TV-šous pid'oitelemha «dramad» ringal. Reslerad vaumitadas, miše torata oikti i kaita ičeze da vastustajad, ka todesižen trauman naceinuz om pen'.
+Resling kävutab [[melodram]]an elementoid avaros. Borcuindan personažad oma znamakahad personad, hö tehtas edelpäi kirjutadud scenarijan mödhe i ozutadas kontrastirujid kosketusid hüvüden i pahuden borcuindan kartte. Lavastused mändas [[boks (sportansugu)|boksan]] pojaval ringal. Ozutadas äi uudimidentagaižid ližascenoid TV-šous pid'oitelemha «dramad» ringal. Reslerad vaumitadas, miše torata oikti i kaita ičtaze da vastustajad, ka todesižen trauman naceinuz om pen'.
 
 == Homaičendad ==
 <references />
