--- a/Väzemskii_(Habarovskan_rand).mw
+++ b/Väzemskii_(Habarovskan_rand).mw
@@ -8,8 +8,8 @@
  | Eläjiden lugu = 12,974
  | Voz' = 2017
  | Pind = 63.14
- | Fail = Гор Вяземский администрация.jpg
- | Pämez' = Aleksandr Usenko (2009—)
+ | Fail = Vyazemskaya station.JPG
+ | Pämez' = Aleksandr Usenko<br />(2009—)
  | Telefonkod = +7-42153-xx-xxx
  | Avtokod = 27
  | Aigvö = [[UTC]]+10 ([[MSK]]+7)
@@ -26,7 +26,15 @@ Lidn sijadase [[Ussuri]]-jogen randpolel, 5 kilometras suvipäivnouzmha jogespä
 Väzemskii om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 14 555 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli vll 1939—2001, 17..19 tuhad eläjid (vl 1967 — 19 000 rist.). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] puine ph. Mikulai-čudonsädajan jumalanpert' om saudud lidnas vozil 1993−2001. Väzemskijan mechoz-tehnikum om professionaližen opendusen aluzkundaks vspäi 1934.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 14 555 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 17..19 tuhad eläjid vll 1939−2001 (19 000 rist. vl 1967).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] puine ph. Mikulai-čudonsädajan jumalanpert' om saudud lidnas vozil 1993−2001. Väzemskijan mechoz-tehnikum om professionaližen opendusen aluzkundaks vspäi 1934.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Гор Вяземский администрация.jpg|Lidnan administracijan sauvuz (2012)
+Железнодорожный вокзал станции Вяземская ночью.jpg|Väzemskai-päraudtestancijan sauvuz vl 2016
+</gallery>
 
 == Irdkosketused ==
 * [http://vyazemskii.khabkrai.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''vyazemskii.khabkrai.ru'').] {{ref-ru}}
