--- a/Bogotol.mw
+++ b/Bogotol.mw
@@ -1,14 +1,14 @@
 {{Eländpunkt
  | Nimi = Bogotol<br />Боготол
- | Lidnanznam = Bogotol city gerb.png
- | Flag = Bogotol city flag.png
+ | Lidnanznam = Coat of arms of Bogotol.svg
+ | Flag = Flag of Bogotol.svg
  | Lidnanznam text = Bogotolan lidnanznam
  | Flag text = Bogotolan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 20,245
  | Voz' = 2017
  | Pind = 62.81
- | Fail = Bogotol.jpg
+ | Fail = Боготол ул Кирова.JPG
  | Pämez' = Andrei Artibäkin<br />(eloku 2015—)
  | Telefonkod = +7-39157-xx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -30,6 +30,15 @@ Bogotol om lidnümbrikon üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 21 051 ristitud. Kaikiš suremb ristitišt oli 30 874 eläjad vl 1959 i 30 100 eläjad vl 1975.
 
 Bogotolan transportan tehnikum<ref>[http://www.b-tt.ru/ Bogotolan transportan tehnikuman sait (''b-tt.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Магазин в Боготоле.JPG|Kanctavaroiden lauk (2015)
+Боготол школа 4.JPG|Škol nomer nell' (2015)
+Боготол трасса Сибирь.JPG|Teverižen holitajan kompleksan sauvomine «Sibir'»-avtotrassal lidnan röunal (2015)
+Боготол жд больница.JPG|Raudteradnikoiden läžundkodi (2015)
+Bogotol.jpg|Bogotol-päraudtestancijan sauvuz vl 2008
+</gallery>
 
 == Homaičendad ==
 <references/>
