--- a/Borodino_(lidn).mw
+++ b/Borodino_(lidn).mw
@@ -15,6 +15,7 @@
  | Aigvö = [[UTC]]+7 (MSK+4)
 }}
 {{Znamoičendad|Borodino}}
+[[Fail:Church of St. Sergius of Radonezh (Borodino).tiff|thumb|left|250px|Ph. Sergii Radonežalaižen jumalanpert' (ortodoksine hristanuskond)]]
 '''Borodino''' ({{lang-ru|Бородино}}) om [[Venäma]]n lidn da lidnümbrik [[Krasnojarskan rand]]an suvipalan päivnouzmas.
 
 == Istorii ==
@@ -26,13 +27,15 @@ Lidn sijadase 330 m ü.m.t. keskmäižel korktusel. Matkad [[Krasnojarsk]]hasai 
 Borodino om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 416 ristitud. Kaikiš suremb ristitišt oli 19..20 tuh. eläjid vll 1996−2006 (20 100 rist. vl 2001). [[Hristanuskond]]an kaks' pühäpertid om lidnas: ortodoksine ph. Sergii Radonežalaižen jumalanpert' i vižkümnenden päivän uskojiden Vinogradnik-pühäpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 17 416 ristitud. Kaikiš suremb ristitišt oli 19..20 tuh. eläjid vll 1996−2006 (20 100 rist. vl 2001).
+
+[[Hristanuskond]]an kaks' pühäpertid om lidnas: ortodoksine ph. Sergii Radonežalaižen jumalanpert' i vižkümnenden päivän uskojiden Vinogradnik-pühäpert' oma olmas lidnas.
 
 Divnogorskan gidroenergetižen tehnikuman filial om professionaližen opendusen aluzkundaks. Kaivuztehnikum sijadase lidnanvuiččes Irš-žilos 7 km päivlaskmha.
 
 == Irdkosketused ==
 * [http://sibborodino.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''sibborodino.ru'').] {{ref-ru}}
-{{Commons|Category:Borodino, Krasnoyarsk Krai}}
+{{Commons|Category:Borodino (town)}}
 
 {{Krasnojarskan randan lidnad}}
 
