--- a/Divnogorsk.mw
+++ b/Divnogorsk.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Divnogorsk<br />Дивногорск
- | Lidnanznam = Coat of Arms of Divnogorsk (Krasnoyarsk krai) (vector).svg
- | Flag = 
+ | Lidnanznam = Divnogorsk COA - crowned.svg
+ | Flag = Divnogorsk flag.svg
  | Lidnanznam text = Divnogorskan lidnanznam
- | Flag text = 
+ | Flag text = Divnogorskan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 29,117
  | Voz' = 2017
  | Pind = 56.6
- | Fail = Дивногорск. Спуск к Енисею (2).JPG
- | Pämez' = Jegor Ol' (2010—)
+ | Fail = Divnogorsk.jpg
+ | Pämez' = Jegor Ol'<br />(2010—)
  | Telefonkod = +7-39144-xx-xxx
  | Avtokod = 24. 84. 88. 124
  | Aigvö = [[UTC]]+7 (MSK+4)
@@ -27,9 +27,18 @@ Lidn sijadase [[Jenisei]]-jogen oiktal randal, mödvedhe [[Krasnojarskan vezivar
 Ovsänk-külä (vspäi 1671, 2228 rist. vl 2010) i kuz' pen't žilod mülüdas lidnümbrikho Divnogorskan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 28 292 ristitud, lidnümbrikon — 32 193 ristitud. Kaikiš suremb lidnan ristitišt oli vl 1996 — 34 300 eläjad. Vl 2017 33 292 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 28 292 ristitud, lidnümbrikon — 32 193 ristitud. Kaikiš suremb lidnan ristitišt oli 34 300 eläjad vl 1996. Vl 2017 kaik 33 292 ristitud elihe lidnümbrikos.
 
 Professionaližen opendusen aluzkundad: medicinine, gidroenergetine i mectehnologijoiden tehnikumad, olimpižen rezervan sportkolledž, kul'turan i mecsarakon radnikoiden kvalifikacijan lujendusen institutad.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Divnogorsk school10 2013.jpg|Škol nomer kümne (gimnazii, 2013)
+Дивногорск. Спуск к Енисею (2).JPG|Lava jaugnikoiden täht Jenisein randannoks, nägu vagzalaspäi
+Krasnoyarsk Dam (Divnogorsk, Krasnoyarsk Krai) 4Y1A8681 (28329488116).jpg|Krasnojarskan GES:an padosein vl 2016
+Дивногорск. Спуск к Енисею (5).JPG|Jogivaldmad vl 2008
+Ст.Дивногорск3.JPG|Divnogorsk-päraudtestancijan sauvuz vl 2010
+</gallery>
 
 == Irdkosketused ==
 * [http://www.divnogorsk-adm.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine portal (''divnogorsk-adm.ru'').] {{ref-ru}}
