--- a/Dudink.mw
+++ b/Dudink.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Dudink<br />Дудинка
- | Lidnanznam = Coat of Arms of Dudinka (Taimyria).png
+ | Lidnanznam = GerbDudinka.jpg
  | Flag = Flag of Dudinka (Krasnoyarsk krai).png
  | Lidnanznam text = Dudinkan lidnanznam
  | Flag text = Dudinkan flag
@@ -25,9 +25,23 @@ Lidn sijadase [[Jenisei]]-jogen oiktal randal, 20 m ü.m.t. keskmäižel korktus
 Viž žilod mülüdas lidnankundha Dudinkan ližaks. Lidnankundan pind — 223 455,69 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 22 175 ristitud, lidnankundan — 24 022 ristitud, rajonan seičeme kümnendest. Kaikiš suremb lidnan ristitišt oli 33 700 eläjad vl 1996. Vl 2017 kaik 23 086 ristitud elädas lidnankundas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 22 175 ristitud, lidnankundan — 24 022 ristitud, rajonan seičeme kümnendest. Kaikiš suremb lidnan ristitišt oli 33 700 eläjad vl 1996. Vl 2017 kaik 23 086 ristitud elihe lidnankundas.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Jumalanmaman Tulendan Pühäpertihe kivine jumalanpert'<ref>[http://sobory.ru/geo/locat/23534 Dudinkan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud lidnas vll 2000−2002.
 
 Taimiran kolledž om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Dudinka06.jpg|Keskuztorg vl 2016 (huralpäi oiktale): Taimiran kodirandantedištandmuzei, časud-majak, počt, kul'turkeskuz, lidnan da rajonan administracii
+Dudinka 03.jpg|Jumalanmaman Tulendan Pühäpertihe jumalanpert', vn 2016 nägu
+Dudinka 02.jpg|Ekstraordinarižiden situacijoiden ministrusen palakundan baz (2016) — Dudinkan arktine ecmižpäzutamižjouk
+2020-08-22 08-00-47 ShiftN Порт Дудинка.jpg|Merijogiportan konteinerterminal vl 2020
+4Y1A9700 Dudinka (28039425424).jpg|Lidnan nägu jogespäi vl 2016
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.gorod-dudinka.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''gorod-dudinka.ru'').] {{ref-ru}}
