--- a/Užur.mw
+++ b/Užur.mw
@@ -9,10 +9,11 @@
  | Voz' = 2017
  | Pind = 38.9
  | Fail = Церковь в Ужуре.jpg
- | Pämez' = Oleg Kirillov (2015—)
+ | Pämez' = Oleg Kirillov<br />(2015—)
  | Telefonkod = +7-39156-xx-xxx
  | Aigvö = [[UTC]]+7 (MSK+4)
 }}
+[[Fail:Храм Петра и Павла (г.Ужур).jpg|thumb|left|250px|Phh. Pedroin da Pauloin jumalanpert', vn 2018 nägu]]
 '''Užur''' ({{lang-ru|Ужур}}) om [[Venäma]]n lidn da lidnankund [[Krasnojarskan rand]]an suvipäivlaskmaiženno röunanno. Se om [[Užuran rajon]]an administrativine keskuz.
 
 == Istorii ==
@@ -26,7 +27,7 @@ Lidn sijadase Užurk-jogen hural randal tobjimalaz ({{lang-ru|Ужурка}}, [[
 Užur om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 587,95 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 16 093 ristitud, rajonan ristitišton pol'. Kaikiš suremb ristitišt oli vl 1992 — 29 100 eläjad, edel Užur-4-eländpunktan erištundad. Sauptud administrativiž-territorialižhe "Solnečnii"-ühtnik (ende Užur-4, raketlidnut, 10 tuh. eläjid, 3,84 km²) sijadase ani suvipäivlaskmha lidnaspäi. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Petran da Pavlan pühäpert' om saudud vozil 1778−1824 kuti missionerine forpost.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 16 093 ristitud, rajonan ristitišton pol'. Kaikiš suremb lidnan ristitišt oli 29 100 eläjad vl 1992, edel Užur-4-eländpunktan erištundad. Sauptud administrativiž-territorialižhe «Solnečnii»-ühtnik (ende Užur-4, raketlidnut, 10 tuh. eläjid, 3,84 km²) sijadase ani suvipäivlaskmha lidnaspäi. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] phh. Pedroin da Pauloin jumalanpert' om saudud vozil 1778−1824 kuti missionerine forpost.
 
 Professionaližen opendusen aluzkund om Užuran äiprofil'ne tehnikum.
 
