--- a/Ujar.mw
+++ b/Ujar.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 12,074
  | Voz' = 2017
  | Pind = 27.7
- | Fail = Ujar.jpg
+ | Fail = Станция Уяр.jpg
  | Pämez' = Valerii Priščepko<br />(semendku 2018—)
  | Telefonkod = +7-39146-xx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -17,7 +17,9 @@
 '''Ujar''' ({{lang-ru|Уяр}}) om [[Venäma]]n lidn da lidnankund [[Krasnojarskan rand]]an suvipäivnouzmas. Se om [[Ujaran rajon]]an administrativine keskuz.
 
 == Enzne ==
-Eländpunktan aluz om pandud vl 1760 kuti ''Ujar-külä''. Vl 1934 ühtenzoittihe sidä lähiženke ''Klükvennai-raudtestancijanke'' da külänke ({{lang-ru|станция Клюквенная}}), nimitihe Ujar-radnikžiloks. Vl 1944 se sai lidnan statusad. Lidn šingotase sömtegimišton edheotandoil (lihakombinat, leibtegim), mugažo kivivoinvalamižterminal i raudbetonan edheotand ratas.
+Eländpunktan aluz om pandud vl 1760 kuti ''Ujar-külä''. Vl 1934 ühtenzoittihe sidä lähiženke ''Klükvennai-raudtestancijanke'' da külänke ({{lang-ru|станция Клюквенная}}), nimitihe Ujar-radnikžiloks. Vl 1944 se sai lidnan statusad.
+
+Ujar šingotase sömtegimišton edheotandoil (lihakombinat, leibtegim), mugažo kivivoinvalamižterminal i raudbetonan edheotand ratas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Transsib]]-raudtel, 340 m ü.m.t. keskmäižel korktusel. Matkad [[Krasnojarsk]]hasai om 95 km päivlaskmha orhal vai 115 km «Sibir'»-avtotedme. Ujar seižub 4 km suvhe avtotrassaspäi, ühtenzotase senke kahtel sarakol. Lähembaine lidn om [[Zaozörnii]] 40 km pohjoižpäivnouzmha raudtedme vai avtol.
@@ -25,14 +27,23 @@ Lidn sijadase [[Transsib]]-raudtel, 340 m ü.m.t. keskmäižel korktusel. Matkad
 Ujar om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 50,22 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 12 665 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli vl 1959 — 21 646 eläjad. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan Toižetamižen jumalanpert' om olmas lidnas vspäi 1874.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 12 665 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 21 646 eläjad vl 1959.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan Toižetamižen jumalanpert' om olmas lidnas vspäi 1874.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Ujar.jpg|Ujaran rajonan administracii (2010)
+Церковь Спаса Преображения, Уяр.jpg|Spasan Toižetamižen jumalanpert', vn 2019 nägu
+Вокзал, Уяр.jpg|Ujar-päraudtestancijan sauvuz vl 2019
+</gallery>
 
 == Homaičendad ==
 <references/>
 
 == Irdkosketused ==
 * [http://www.admuyar.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''admuyar.ru'').] {{ref-ru}}
-{{Commons|Category:Uyar (Uyarsky District)}}
+{{Commons|Category:Uyar (town)}}
 
 {{Krasnojarskan randan lidnad}}
 
