*Empty MediaWiki Message*

--- a/Hibbert_Eleanor.mw
+++ b/Hibbert_Eleanor.mw
@@ -1,7 +1,7 @@
 {{Personalii}}
-'''Eleanor Elis Hibbert''' ({{lang-en|Eleanor Alice Hibbert}}), todesine nimi — '''Eleanor Elis Baford''' (angl.: ''Eleanor Alice Burford''; sünd. [[1. sügüz'ku]] [[1906]], [[London]], [[Sur' Britanii]] — kol. [[18. viluku]] [[1993]], matkan aigan [[Keskmeri|Keskmeredme]] [[Afinad|Afinoiden]] da [[Port Said]]an keskes) oli britanijalaine ([[Anglii|anglijalaine]]) kirjutai naine. Todesine sündundan dat i elon detalid ei olgoi tetabad ühtei.
+'''Eleanor Elis Hibbert''' ({{lang-en|Eleanor Alice Hibbert}}), edel lähtendan mehele — '''Eleanor Elis Berford''' (angl.: ''Eleanor Alice Burford''; sünd. [[1. sügüz'ku]] [[1906]], [[London]], [[Sur' Britanii]] — kol. [[18. viluku]] [[1993]], matkan aigan [[Keskmeri|Keskmeredme]] [[Afinad|Afinoiden]] da [[Port Said]]an keskes) oli britanine ([[Anglii|anglijalaine]]) kirjutai naine. Todesine sündundan dat i elon detalid ei olgoi tetabad ühtei.
 
-Hän kirjuti istorižid, gotikaižid da armastuzromanoid. Sädamizen vozil (1941-1993) kirjuti 200 kirjad, pästtihe 100 mln egzemplärid 20 kelel kaiked mail'madme.
+Naine kirjuti istorižid, gotikaižid da armastuzromanoid. Sädamizen vozil (1941−1993) kirjuti 200 kirjad, pästtihe 100 mln egzemplärid 20 kelel kaiked mail'madme.
 
 == Psevdonimad ==
 * Eleonor Baford (''Eleanor Buford'')
@@ -21,3 +21,4 @@ Hän kirjuti istorižid, gotikaižid da armastuzromanoid. Sädamizen vozil (1941
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Londonha]]
+[[Kategorii:Kolnuded Keskmeres]]
