--- a/Železnogorsk_(Krasnojarskan_rand).mw
+++ b/Železnogorsk_(Krasnojarskan_rand).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 84,114
  | Voz' = 2017
  | Pind = 
- | Fail = Lenin Square and the Palace of Culture in Zheleznogorsk, Krasnoyarsk Krai.JPG
+ | Fail = 
  | Pämez' = Igor' Kuksin<br />(tal'vku 2017—)
  | Telefonkod = +7-3919-xxx-xxx
  | Avtokod = 24. 84. 88. 124
@@ -29,6 +29,15 @@ Lidnanvuitte Podgornii-žilo (6541 rist. vl 2017), koume muite žilod da külä 
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 84 795 ristitud, lidnümbrikon — 93 841 ristitud. Kaikiš suremb lidnan ristitišt oli vl 1992 — 97 500 eläjad, lidnümbrikon vl 2002 — 102 620 eläjad.
 
 Ižandusen päsarakod oma uden südäitukuižen poltusen tehmine da vanhan ümbriradmine, Man kaimdajiden pästand (Venäman civiližiden kaimdajiden 70%), sauvond, mugažo himine specialine tegim om olmas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+"Information Satellite Systems Reshetnev" main building.jpg|«Informacižed kaimdaisistemad M.F. Rešetnöv-akademikan nimed»-kompanijan päsauvuz vl 2006
+Archangel Michael temple, Zheleznogorsk (Krasnoyarsk Krai).JPG|Ph. Mikoi-arhangelan päjumalanpert', vn 2011 nägu
+Mining and Chemical Combine headquarters.jpg|Kaivuzhimižen kombinatan päfater lidnas vl 2018
+Lenin Square and the Palace of Culture in Zheleznogorsk, Krasnoyarsk Krai.JPG|Kul'turkeskuz Leninan torgul
+Автовокзал г.Железногорск.jpg|Avtobusstancii vl 2012
+</gallery>
 
 == Irdkosketused ==
 * [http://www.admk26.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''admk26.ru'').] {{ref-ru}}
