--- a/Železnogorsk_(Krasnojarskan_rand).mw
+++ b/Železnogorsk_(Krasnojarskan_rand).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 84,114
  | Voz' = 2017
  | Pind = 
- | Fail = 
+ | Fail = Clock tower in Zheleznogorsk, Krasnoyarsk Krai.jpg
  | Pämez' = Igor' Kuksin<br />(tal'vku 2017—)
  | Telefonkod = +7-3919-xxx-xxx
  | Avtokod = 24. 84. 88. 124
