--- a/Zelenogorsk_(Krasnojarskan_rand).mw
+++ b/Zelenogorsk_(Krasnojarskan_rand).mw
@@ -18,7 +18,9 @@
 '''Zelenogorsk''' ({{lang-ru|Зеленогорск}}) om [[Venäma]]n [[sauptud administrativiž-territorialine ühtnik|sauptud]] lidn da lidnümbrik [[Krasnojarskan rand]]an suvipalan päivnouzmas.
 
 == Istorii ==
-Ezmässai ''Ust'-Barg-žilo'' ({{lang-ru|посёлок Усть-Барга}}) mainitase vl 1920, nimitihe sijaližen penen jogen mödhe. Nügüdläižen eländpunktan aluz om pandud vl 1956 kuti ''Zaozörnii-13'', sid' ''Krasnojarsk-45'' [[uran (himine element)|uranan]] küllästamižfabrikan («elektrohimine tegim») da Krasnojarskan GRES-2 sauvomižen ühtes. Vspäi 1988 pästtas uranad [[atomelektrostancii|AES:oiden]] täht vaiše. Lidn šingotase metalltegesiden i plastikprofilän edheotandoil, leibtegimel i mebel'fabrikal mugažo.
+Ezmässai ''Ust'-Barg-žilo'' ({{lang-ru|посёлок Усть-Барга}}) mainitase vl 1920, nimitihe sijaližen penen jogen mödhe. Nügüdläižen eländpunktan aluz om pandud vl 1956 kuti ''Zaozörnii-13'', sid' ''Krasnojarsk-45'' [[uran (himine element)|uranan]] küllästamižfabrikan («elektrohimine tegim») da Krasnojarskan GRES-2 sauvomižen ühtes. Vspäi 1988 pästtas uranad [[atomelektrostancii|AES:oiden]] täht vaiše.
+
+Zelenogorsk šingotase metalltegesiden i plastikprofilän edheotandoil, leibtegimel i mebel'fabrikal mugažo. «Sibvolokno»-tegim om okaidud.
 
 == Geografijan andmused ==
 Lidn sijadase Kan-jogen hural randal ([[Jenisei]]n hura ližajogi), 170 m ü.m.t. keskmäižel korktusel. Om ümbärtud [[Ribnojen rajon]]an territorijal. Matkad [[Krasnojarsk]]hasai om 110 km päivlaskmha orhal vai 150 km avtotedme. Lähembaine lidn i Transsiban raudtestancii om [[Zaozörnii]] 20 km suvhe avtotedme.
@@ -29,6 +31,15 @@ Zelenogorsk om lidnümbrikon üks'jäine eländpunkt. Lidnan pertišton pind —
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 66 056 ristitud. Kaikiš suremb ristitišt oli enamba 69 tuhad eläjid vll 2001−2006 (69 500 rist. vl 2001). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaižen päjumalanpert' om saudud lidnas vll 1996−2004.
 
 Krasnojarskan elektromehanine tehnikum i Zelenogorskan tegimištoližtehnologijoiden da servisan tehnikum oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник основателям города - panoramio (1).jpg|Muštnik lidnan alusenpanijoile, vn 2007 nägu
+Krasnoyarskaya GRES-2.jpg|Krasnojarskan GRES-2 vl 2007
+Знакомый домик - panoramio (1).jpg|«Krasnii Jar»-torguindkeskuz (2015, ''Rusked pengr'')
+Больница - panoramio (22).jpg|Federaližen medikbiologižen agentusen klinine läžundkodi nomer 42 (2015)
+Набережная - panoramio (87).jpg|Randird vn 2014 sulakus
+</gallery>
 
 == Irdkosketused ==
 * [http://www.zeladmin.ru/ Zelenogorsk-SATÜ:n sijaližen ičeohjandusen aluzkundoiden sait (''zeladmin.ru'').] {{ref-ru}}
